--- a/Makefile.toml
+++ b/Makefile.toml
@@ -527,7 +527,7 @@ script_runner = "@duckscript"
 script = '''
 exit_on_error true
 !include_files ./support/functions.ds
-generate_generic feature_tests rust src
+generate_generic feature_tests rust bindings/src
 '''
 
 # Build deps
