--- a/static_rust_macro/Cargo.toml
+++ b/static_rust_macro/Cargo.toml
@@ -15,4 +15,7 @@ proc-macro = true
 path = "src/lib.rs"
 
 [dependencies]
+diplomat_core.workspace = true
 proc-macro2 = "1.0.97"
+syn = "2.0.105"
+quote = "1.0"
