--- a/Makefile.toml
+++ b/Makefile.toml
@@ -521,6 +521,16 @@ rm -fr nanobind/src/sub_modules
 mv nanobind/src/cpp/sub_modules nanobind/src/
 rm -rf nanobind/src/cpp/
 '''
+
+[tasks.gen-rust-feature]
+category = "Code generation"
+script_runner = "@duckscript"
+script = '''
+exit_on_error true
+!include_files ./support/functions.ds
+generate_generic feature_tests static_rust bindings/src
+'''
+
 # Build deps
 
 [tasks.build-tool]
