Rename to shared_rust

--- a/feature_tests/static_rust/bindings/Cargo.toml
+++ b/feature_tests/static_rust/bindings/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
-name = "static-rust-feature-test-bindings"
-description = "Static Rust Feature Test bindings"
+name = "shared-rust-feature-test-bindings"
+description = "Shared Rust Feature Test bindings"
 edition = "2024"
 publish = false
-
-[workspace]
 
 [lib]
 path = "src/lib.rs"
