--- a/Makefile.toml
+++ b/Makefile.toml
@@ -528,7 +528,7 @@ script_runner = "@duckscript"
 script = '''
 exit_on_error true
 !include_files ./support/functions.ds
-generate_generic feature_tests static_rust bindings/src
+generate_generic feature_tests shared_rust bindings/src
 '''
 
 # Build deps
