--- a/feature_tests/shared_rust/test/Cargo.toml
+++ b/feature_tests/shared_rust/test/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "shared-rust-feature-tests"
-description = "shared Rust Feature Tests"
+description = "Shared Rust Feature Tests"
 edition = "2024"
 publish = false
 
