Fix enum discriminant, rename templates

--- a/feature_tests/shared_rust/Cargo.toml
+++ b/feature_tests/shared_rust/Cargo.toml
@@ -1,3 +1,7 @@
 [workspace]
 resolver = "2"
 members = ["bindings", "test"]
+
+[workspace.dependencies]
+shared-rust-feature-test-bindings = { path= "bindings" }
+diplomat-feature-tests = { path = "../" }
