Use diplomat_runtime (for now?)

--- a/feature_tests/shared_rust/Cargo.toml
+++ b/feature_tests/shared_rust/Cargo.toml
@@ -5,3 +5,4 @@ members = ["bindings", "test"]
 [workspace.dependencies]
 shared-rust-feature-test-bindings = { path= "bindings" }
 diplomat-feature-tests = { path = "../" }
+diplomat-runtime = { path="../../runtime"}
