Mark shared_rust feature_tests as linguist generated

--- a/.gitattributes
+++ b/.gitattributes
@@ -22,3 +22,4 @@ feature_tests/js/api/** linguist-generated=true
 feature_tests/js/api_legacy/** linguist-generated=true
 feature_tests/demo_gen/demo/** linguist-generated=true
 feature_tests/nanobind/src/** linguist-generated=true
+feature_tests/shared_rust/bindings/src/** linguist-generated=true
