Start on opaque in tests
Expand tests

--- a/feature_tests/Cargo.toml
+++ b/feature_tests/Cargo.toml
@@ -11,6 +11,9 @@ repository.workspace = true
 keywords.workspace = true
 readme = "../README.md"
 
+[features]
+allocator_trait = []
+
 
 [lib]
 crate-type = ["staticlib", "rlib", "cdylib"]
